; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/pcmcia/extr_au1000_pb1x00.c_pb1x00_pcmcia_shutdown.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/pcmcia/extr_au1000_pb1x00.c_pb1x00_pcmcia_shutdown.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@PCMCIA_BOARD_REG = common dso_local global i32 0, align 4
@PC_DEASSERT_RST = common dso_local global i32 0, align 4
@PC_DRV_EN = common dso_local global i32 0, align 4
@PB1000_PCR = common dso_local global i32 0, align 4
@PCR_SLOT_0_RST = common dso_local global i32 0, align 4
@PCR_SLOT_1_RST = common dso_local global i32 0, align 4
@VCC_HIZ = common dso_local global i32 0, align 4
@VPP_HIZ = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @pb1x00_pcmcia_shutdown to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @pb1x00_pcmcia_shutdown() #0 {
  %1 = alloca i32, align 4
  %2 = load i32, i32* @PCMCIA_BOARD_REG, align 4
  %3 = call i32 @au_readw(i32 %2)
  %4 = and i32 %3, -16
  store i32 %4, i32* %1, align 4
  %5 = load i32, i32* @PC_DEASSERT_RST, align 4
  %6 = load i32, i32* @PC_DRV_EN, align 4
  %7 = or i32 %5, %6
  %8 = xor i32 %7, -1
  %9 = load i32, i32* %1, align 4
  %10 = and i32 %9, %8
  store i32 %10, i32* %1, align 4
  %11 = load i32, i32* %1, align 4
  %12 = load i32, i32* @PCMCIA_BOARD_REG, align 4
  %13 = call i32 @au_writew(i32 %11, i32 %12)
  %14 = call i32 @au_sync_delay(i32 2)
  ret i32 0
}

declare dso_local i32 @au_readw(i32) #1

declare dso_local i32 @au_writew(i32, i32) #1

declare dso_local i32 @au_sync_delay(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
